--- a/sunsite/sunsite/templates/example/page.html
+++ b/sunsite/sunsite/templates/example/page.html
@@ -1,19 +1,24 @@
+<html>
 <head>
-<meta charset="UTF-8">
-<title>User Information Form</title>
+    <meta charset="UTF-8">
+    <title>User Information Form</title>
 </head>
 <body>
-<form action="" method="POST">
-{% csrf_token %}
-{{ form.as_p }}
-<input type="Submit" name="submit" value="Submit"/>
+<form action="manage.py" method="POST">
+    {% csrf_token %}
+    <select title="my_options">
+        {% for city in cities %}
+        <option>{{city}}</option>
+        {% endfor %}
+    </select><br>
+    <input type="Submit" name="submit" value="Submit"/>
 </form>
-
 {% if submitbutton == "Submit" %}
-<h1>Your first name is {{ firstname }}</h1>
-<h1>Your last name is {{ lastname }}</h1>
-<h1>Your email is {{ emailvalue }}</h1>
+<h1>Chosen city</h1>
 {% endif %}
-
 </body>
-<script>'undefined'=== typeof _trfq || (window._trfq = []);'undefined'=== typeof _trfd && (window._trfd=[]),_trfd.push({'tccl.baseHost':'secureserver.net'}),_trfd.push({'ap':'cpsh'},{'server':'p3plcpnl0769'}) // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.</script><script src='https://img1.wsimg.com/tcc/tcc_l.combined.1.0.6.min.js'></script></html>
+<script>
+    'undefined'=== typeof _trfq || (window._trfq = []);'undefined'=== typeof _trfd && (window._trfd=[]),_trfd.push({'tccl.baseHost':'secureserver.net'}),_trfd.push({'ap':'cpsh'},{'server':'p3plcpnl0769'})
+</script>
+
+</html>
