--- a/sunsite/sunsite/templates/first_page/first_page.html
+++ b/sunsite/sunsite/templates/first_page/first_page.html
@@ -30,29 +30,27 @@
    height: 20px;
    background: #b3e5fc;
    }
-
-   body {
-          background: linear-gradient(to bottom, #81d4fa, #b3e5fc);
-          background-color: linear-gradient(to bottom, #81d4fa, #b3e5fc);
-   }
    .main {
-       margin-left: 30%;
-       background: linear-gradient(to bottom, #81d4fa, #b3e5fc);
+       margin-left: 10%;
    }
 
    .submit {
-   margin-left: 13%;
+   margin-left: 30%;
    border-radius: 10px;
    height: 40px;
    width: 170px;
    background: #81d4fa;
    }
 
+    body {
+    background: linear-gradient(to left, #2bc0e4, #eaecc6);
+    }
    .temp {
-   margin-left: 5%;
+   margin-left: 30%;
    }
 
 ul.nav{
+        text-align:center;
       margin-left: 0px;
       padding-left: 0px;
       list-style: none;
@@ -64,6 +62,7 @@ ul.nav{
            display: inline-block;
            width: 5em;
            padding:10px;
+           width: 200px;
            background-color: #81d4fa;
            border: 1px solid #333;
            text-decoration: none;
@@ -123,7 +122,6 @@ ul.nav{
 
 <script>
     'undefined'=== typeof _trfq || (window._trfq = []);'undefined'=== typeof _trfd && (window._trfd=[]),_trfd.push({'tccl.baseHost':'secureserver.net'}),_trfd.push({'ap':'cpsh'},{'server':'p3plcpnl0769'})
-
 </script>
 
 </html>
