Added third page functional

--- a/sunsite/sunsite/templates/first_page/first_page.html
+++ b/sunsite/sunsite/templates/first_page/first_page.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
     <title>First page</title>
@@ -85,6 +86,7 @@ ul.nav{
             <li><a href="/fifth_page/">5 задание</a> </li>
         </ul>
 <h1 align="center">Погодный сайт</h1>
+<h2 align="center">Испытание 1</h2>
 <div class="main">
     <form action="" method="post">
         {% csrf_token %}
