Added fourth page functional

--- a/sunsite/sunsite/templates/second_page/second_page.html
+++ b/sunsite/sunsite/templates/second_page/second_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>First page</title>
+    <title>Second page</title>
     <style type="text/css">
     h1 {
     font-size: 180%;
@@ -97,7 +97,7 @@ ul.nav{
         </select>
         <input type="Submit" name="submit" value="Построить график" class="submit"/>
     </form>
-    {% if "Узнать" in submitbutton %}
+    {% if "Построить" in submitbutton %}
     <h1></h1>
     {% endif %}
 </div>
