--- a/sunsite/sunsite/templates/third_page/third_page.html
+++ b/sunsite/sunsite/templates/third_page/third_page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>First page</title>
+    <title>Third page</title>
     <style type="text/css">
     h1 {
     font-size: 180%;
@@ -98,7 +98,7 @@ ul.nav{
         </select>
         <input type="Submit" name="submit" value="Построить график" class="submit"/>
     </form>
-    {% if "Узнать" in submitbutton %}
+    {% if "Построить" in submitbutton %}
     <h1></h1>
     {% endif %}
 </div>
