Added fifth page functional

--- a/sunsite/sunsite/templates/fourth_page/fourth_page.html
+++ b/sunsite/sunsite/templates/fourth_page/fourth_page.html
@@ -80,9 +80,9 @@ ul.nav{
 <body>
         <ul class="nav">
             <li><a href="/">Главная</a></li>
+            <li><a href="/first_page/">1 задание</a></li>
             <li><a href="/second_page/">2 задание</a></li>
             <li><a href="/third_page/">3 задание</a></li>
-            <li><a href="/fourth_page/">4 задание</a></li>
             <li><a href="/fifth_page/">5 задание</a> </li>
         </ul>
 <h1 align="center">Погодный сайт</h1>
