Added ui on pages

--- a/sunsite/sunsite/templates/first_page/first_page.html
+++ b/sunsite/sunsite/templates/first_page/first_page.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
     <title>First page</title>
@@ -73,6 +74,9 @@ ul.nav{
                background-color: #333;
                color: #f4f4f4;
            }
+img {
+    margin-top:5px;
+}
     </style>
 </head>
 
@@ -85,12 +89,13 @@ ul.nav{
             <li><a href="/fifth_page/">5 задание</a> </li>
         </ul>
 <h1 align="center">Погодный сайт</h1>
+<h2 align="center">Испытание 1</h2>
 <div class="main">
     <form action="" method="post">
         {% csrf_token %}
         <h2>Город</h2>
 
-        <select title="my_options" name="city">
+        <select title="Choose" name="city">
             {% for city in cities %}
             <option>{{city}}</option>
             {% endfor %}
