--- a/sunsite/sunsite/templates/second_page/second_page.html
+++ b/sunsite/sunsite/templates/second_page/second_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>First page</title>
+    <title>Second page</title>
     <style type="text/css">
     h1 {
     font-size: 180%;
@@ -23,21 +23,12 @@
       height: 30px;
    }
 
-   input {
-   border-radius: 10px;
-   padding: 2px;
-   width: 140px;
-   height: 20px;
-   background: #b3e5fc;
-   }
+    body {
+    background: linear-gradient(to left, #2bc0e4, #eaecc6);
+    }
 
-   body {
-          background: linear-gradient(to bottom, #81d4fa, #b3e5fc);
-          background-color: linear-gradient(to bottom, #81d4fa, #b3e5fc);
-   }
    .main {
        margin-left: 30%;
-       background: linear-gradient(to bottom, #81d4fa, #b3e5fc);
    }
 
    .submit {
@@ -53,6 +44,7 @@
    }
 
 ul.nav{
+        text-align:center;
       margin-left: 0px;
       padding-left: 0px;
       list-style: none;
@@ -64,6 +56,7 @@ ul.nav{
            display: inline-block;
            width: 5em;
            padding:10px;
+           width: 200px;
            background-color: #81d4fa;
            border: 1px solid #333;
            text-decoration: none;
@@ -74,7 +67,9 @@ ul.nav{
                background-color: #333;
                color: #f4f4f4;
            }
-
+img {
+    margin-top:5px;
+}
     </style>
 </head>
 
@@ -87,28 +82,27 @@ ul.nav{
     <li><a href="/fifth_page/">5 задание</a></li>
 </ul>
 <h1 align="center">Погодный сайт</h1>
+<h2 align="center">Испытание 1</h2>
 <div class="main">
     <form action="" method="post">
         {% csrf_token %}
         <h2>Город</h2>
-        <select title="my_options" name="city">
+        <select title="Choose" name="city">
             {% for city in cities %}
             <option>{{city}}</option>
             {% endfor %}
         </select>
         <input type="Submit" name="submit" value="Построить график" class="submit"/>
     </form>
-    {% if "Узнать" in submitbutton %}
-    <h1></h1>
-    {% endif %}
 </div>
-
+    {% if "Построить" in submitbutton and plot != None %}
+        {% load static %}
+        <img src='{% static "imgs\plot.png" %}' alt="График" width="100%" height="100%">
+    {% endif %}
 </body>
 
 <script>
     'undefined'=== typeof _trfq || (window._trfq = []);'undefined'=== typeof _trfd && (window._trfd=[]),_trfd.push({'tccl.baseHost':'secureserver.net'}),_trfd.push({'ap':'cpsh'},{'server':'p3plcpnl0769'})
-
-
 </script>
 
 </html>
