--- a/sunsite/sunsite/templates/fifth_page/fifth_page.html
+++ b/sunsite/sunsite/templates/fifth_page/fifth_page.html
@@ -31,11 +31,11 @@
    background: #b3e5fc;
    }
    .main {
-       margin-left: 30%;
+       text-align: center;
    }
 
    .submit {
-   margin-left: 13%;
+   margin-top: 8%;
    border-radius: 10px;
    height: 40px;
    width: 170px;
@@ -46,7 +46,7 @@
     background: linear-gradient(to left, #2bc0e4, #eaecc6);
     }
    .temp {
-   margin-left: 30%;
+      text-align: center;
    }
 
 ul.nav{
@@ -74,6 +74,15 @@ ul.nav{
                color: #f4f4f4;
            }
 img {margin-top: 10px;}
+.g1 {float: left;
+     width: 50%;
+     text-align: center;}
+
+.g2 {float: right;
+     width: 50%;
+     text-align: center;}
+
+
     </style>
 </head>
 
@@ -90,13 +99,17 @@ img {margin-top: 10px;}
 <div class="main">
     <form action="" method="post">
         {% csrf_token %}
+        <div class="g1">
         <h2>Город</h2>
         <select title="my_options" name="city">
             {% for city in cities %}
             <option>{{city}}</option>
             {% endfor %}
         </select>
-        <input type="Submit" name="submit" value="Построить график" class="submit"/>
+        </div>
+        <div class="g2">
+            <input type="Submit" name="submit" value="Построить график" class="submit"/>
+        </div>
     </form>
 </div>
 {% if "Построить" in submitbutton %}
