--- a/sunsite/sunsite/templates/first_page/first_page.html
+++ b/sunsite/sunsite/templates/first_page/first_page.html
@@ -32,11 +32,10 @@
    background: #b3e5fc;
    }
    .main {
-       margin-left: 10%;
+       text-align: center;
    }
-
    .submit {
-   margin-left: 30%;
+   text-align: center;
    border-radius: 10px;
    height: 40px;
    width: 170px;
@@ -47,7 +46,7 @@
     background: linear-gradient(to left, #2bc0e4, #eaecc6);
     }
    .temp {
-   margin-left: 30%;
+   text-align: center;
    }
 
 ul.nav{
@@ -74,9 +73,6 @@ ul.nav{
                background-color: #333;
                color: #f4f4f4;
            }
-img {
-    margin-top:5px;
-}
     </style>
 </head>
 
