--- a/sunsite/sunsite/templates/main_page/main_page.html
+++ b/sunsite/sunsite/templates/main_page/main_page.html
@@ -35,6 +35,7 @@
 </head>
 <body>
     <h1 align="center">Погодный сайт</h1>
+    <h1 align="center">☼ ☼ ☼ ☼ ☼ ☼ ☼ ☼ ☼ ☼</h1>
         <ul class="nav">
             <li><a href="/first_page/">Первая страница!</a></li>
             <li><a href="/second_page/">Вторая страница!</a></li>
