--- a/sunsite/sunsite/templates/second_page/second_page.html
+++ b/sunsite/sunsite/templates/second_page/second_page.html
@@ -28,11 +28,11 @@
     }
 
    .main {
-       margin-left: 30%;
+       text-align: center;
    }
 
    .submit {
-   margin-left: 13%;
+   margin-top: 8%;
    border-radius: 10px;
    height: 40px;
    width: 170px;
@@ -40,8 +40,8 @@
    }
 
    .temp {
-   margin-left: 5%;
-   }
+      text-align: center;
+    }
 
 ul.nav{
         text-align:center;
@@ -68,8 +68,16 @@ ul.nav{
                color: #f4f4f4;
            }
 img {
-    margin-top:5px;
+    margin-top:10px;
 }
+.g1 {float: left;
+     width: 50%;
+     text-align: center;}
+
+.g2 {float: right;
+     width: 50%;
+     text-align: center;}
+
     </style>
 </head>
 
@@ -86,13 +94,17 @@ img {
 <div class="main">
     <form action="" method="post">
         {% csrf_token %}
+        <div class="g1">
         <h2>Город</h2>
         <select title="Choose" name="city">
             {% for city in cities %}
             <option>{{city}}</option>
             {% endfor %}
         </select>
+        </div>
+        <div class="g2">
         <input type="Submit" name="submit" value="Построить график" class="submit"/>
+        </div>
     </form>
 </div>
     {% if "Построить" in submitbutton and plot != None %}
