Added requirements and update main page

--- a/sunsite/sunsite/templates/main_page/main_page.html
+++ b/sunsite/sunsite/templates/main_page/main_page.html
@@ -37,11 +37,11 @@
     <h1 align="center">Погодный сайт</h1>
     <h1 align="center">☼ ☼ ☼ ☼ ☼ ☼ ☼ ☼ ☼ ☼</h1>
         <ul class="nav">
-            <li><a href="/first_page/">Первая страница!</a></li>
-            <li><a href="/second_page/">Вторая страница!</a></li>
-            <li><a href="/third_page/">Третья страница!</a></li>
-            <li><a href="/fourth_page/">Четвёртая страница!</a></li>
-            <li><a href="/fifth_page/">Пятая страница!</a> </li>
+            <li><a href="/first_page/">Первое испытание</a></li>
+            <li><a href="/second_page/">Второе испытание</a></li>
+            <li><a href="/third_page/">Третье испытание</a></li>
+            <li><a href="/fourth_page/">Четвёртое испытание</a></li>
+            <li><a href="/fifth_page/">Пятое испытание</a> </li>
         </ul>
 </body>
 </html>
